[package]
name = "ry-mathr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug_all = ["debug_lrparser", "debug_grammar", "debug_lexer"]
debug_lrparser = []
debug_grammar = []
debug_lexer = []

[dependencies]
ndarray = "0.15.3"